[metadata]
name = kubekind
description = Python library to generate Kubernetes manifests
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/joaompinto/kubekind
license = MIT
license_file = LICENSE

[options]
packages = find_namespace:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    kubekind = kubekind.__main__:main
