[metadata]
name = kubekind
description = Library to generate Kubernetes manifests using Python code
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/joaompinto/kubekind
license = MIT
license_file = LICENSE

[options]
packages = find_namespace:
python_requires = >= 3.9
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    kubekind = kubekind.__main__:main
